test/errors/distinct_add_mismatch.haste
const Apple = distinct int;
const Orange = distinct int;
const a = cast[Apple] 5;
const o = cast[Orange] 10;
const fruit_salad = a + o;
